# Pupper-Project

./: AWS_DEPLOYMENT_CHECKLIST.md  UPLOAD_API_README.md  test_upload.html  upload_example.html
architecture-diagrams/: README.md  aws-services-list.md  component-details.md  current-architecture.py  future-architecture.py  generate-diagrams.bat  impressive-slides.md  lucidchart-diagram-guide.md  presentation-brief.md  presentation-summary.md  slide-content.md
builders-bootcamp/: package-lock.json  package.json  tsconfig.json
builders-bootcamp/src/: App.tsx
cdk/: README.md  TESTING.md  TEST_RESULTS.md  pyproject.toml  pytest.ini  run_tests.py  test_api.py  test_image_upload.py  test_presigned_url.py  test_request.json  test_runner.sh  test_upload_api.py  test_upload_integration.py
cdk/cdk/: cdk_stack.py  cdk_stack_fixed.py  cdk_stack_no_kms.py  cdk_stack_updated.py
cdk/functions/: Dockerfile  dogs.py  dogs_simple.py  hello.py  image_processor.py  image_resizer.py  image_resizer_backup.py  image_resizer_dimensions.py  image_resizer_final.py  image_resizer_quality.py  image_resizer_simple.py  requirements.txt  upload_handler.py
cdk/tests/: test_cdk_stack.py  test_dogs_handler.py  test_image_processor.py
frontend/: .env  .env.example  README.md  api-test.html  debug-api.html  index.html  package-lock.json  package.json  quick-fix.html  test-simple.html  test.html  tsconfig.tsbuildinfo  working-frontend.html
frontend/public/: index.html
frontend/src/: App.tsx  theme.ts  vite-env.d.ts
project-components-&-requirements/: project-components.md
(+18 files in other folders)
